--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
 body {
     font-family: 'Roboto', sans-serif;
     display: grid;
-    grid-template-columns:  2fr 10fr;
+    grid-template-columns: 2fr 10fr;
     grid-template-rows: 100vh;
-    grid-template-areas:
-        "menu content";
+    grid-template-areas: "menu content";
     margin: 0%;
 }
 
@@ -42,7 +41,7 @@ a {
 
 .landing-content {
     grid-area: content;
-    background-image: url(../assets/meblue.jpg);
+    background-image: url(../assets/photo-meblue.jpg);
     background-size: cover;
     background-position: 40% 0%;
 }
@@ -99,8 +98,10 @@ strong {
     flex-wrap: wrap;
     justify-content: space-around;
     height: 712px;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 .skiply-images img {
@@ -109,5 +110,295 @@ strong {
 }
 
 .chat-container {
-    max-width: 33.33%;
+    max-width: 40%;
+}
+
+.chatroom {
+    width: 100%;
+    height: 600px;
+    color: #fff;
+    max-height: 90vh;
+    background-color: none;
+    letter-spacing: normal;
+    overflow: hidden;
+}
+
+.chatroom, .chatroom * {
+    box-sizing: border-box
+}
+
+.chatroom.closed {
+    height: 40px
+}
+
+.chatroom h3 {
+    background-color: #5A17EE;
+    color: #fff;
+    margin: 0;
+    height: 40px;
+    font-weight: 600;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    display: none;
+}
+
+.chatroom .chats {
+    box-sizing: border-box;
+    padding: 20px;
+    margin: 0;
+    height: calc(100% - 80px);
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch
+}
+
+.chatroom .chats .chat {
+    background: #5A17EE;
+    position: relative;
+    padding: 10px 10px;
+    font-size: 14px;
+    border-radius: 10px;
+    list-style: none;
+    float: left;
+    clear: both;
+    margin: 10px 0 0;
+    max-width: 90%
+}
+
+.chatroom .chats .chat img {
+    max-width: 100%;
+    vertical-align: middle
+}
+
+.chatroom .chats .chat.left {
+    border-top-left-radius: 0;
+    background-color: #807AFB;
+}
+
+.chatroom .chats .chat.right {
+    float: right;
+    clear: both;
+    border-top-right-radius: 0
+}
+
+.chatroom .chats .chat .text {
+    word-wrap: break-word;
+}
+
+.chatroom .chats .chat.chat-img {
+    padding: 5px
+}
+
+.chatroom .chats .chat a {
+    text-decoration: none;
+    color: #3498db
+}
+
+.chatroom .chats .chat ol, .chatroom .chats .chat ul {
+    margin: 0;
+    padding-left: 1.5em
+}
+
+.chatroom .chats .chat ol li, .chatroom .chats .chat ul li {
+    padding-left: 0
+}
+
+.chatroom .chats .chat.waiting {
+    margin: 10px 0;
+    background: transparent;
+    padding: 0
+}
+
+@keyframes fade {
+    0% {
+        opacity: 1
+    }
+    to {
+        opacity: .3
+    }
+}
+
+.chatroom .chats .chat.waiting span {
+    font-size: 1.5em;
+    animation-name: fade;
+    animation-duration: .8s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out
+}
+
+.chatroom .chats .chat.waiting span:first-child {
+    animation-delay: 0s
+}
+
+.chatroom .chats .chat.waiting span:nth-child(2) {
+    animation-delay: .4s
+}
+
+.chatroom .chats .chat.waiting span:nth-child(3) {
+    animation-delay: .8s
+}
+
+.chatroom .chats .time {
+    list-style: none;
+    clear: both;
+    height: 10px;
+    font-size: 10px;
+    color: #656565;
+    margin: 5px 0 20px
+}
+
+.chatroom .chats .time.left {
+    float: left
+}
+
+.chatroom .chats .time.right {
+    float: right
+}
+
+.chatroom .chats .chat-buttons {
+    position: relative;
+    padding: 0;
+    font-size: 14px;
+    list-style: none;
+    clear: both;
+    margin: 10px 0;
+    text-align: center
+}
+
+.chatroom .chats .chat-buttons .chat-button {
+    display: inline-block;
+    transition: all .3s ease;
+    cursor: pointer;
+    margin: 3px;
+    background-color: black;
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 5px 10px;
+    letter-spacing: normal;
+    border-radius: 10px
+}
+
+.chatroom .chats .chat-buttons .chat-button.chat-button-selected, .chatroom .chats .chat-buttons .chat-button:hover {
+    background-color: black;
+    color: #fff
+}
+
+.chatroom .chats .chat-buttons .chat-button.chat-button-disabled {
+    color: #fff;
+    border: 2px solid black
+}
+
+.chatroom .input {
+    height: 40px;
+    width: 100%;
+    margin: 0;
+    padding: 0 5px;
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 3px;
+}
+
+.chatroom .input input[type=text] {
+    background-color: #fff;
+    outline: 0;
+    border: 1px solid #fff;
+    border-right: none;
+    color: black;
+    padding: 0 5px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    height: 30px;
+    flex: 4;
+    box-sizing: border-box;
+    font-size: 14px;
+    transition: background-color .2s ease;
+}
+
+.chatroom .input input[type=text]:focus {
+    box-shadow: none;
+    background-color: #fff
+}
+
+.chatroom .input input[type=submit] {
+    display: inline-block;
+    background: #5A17EE;
+    border: none;
+    color: #fff;
+    height: 30px;
+    min-width: 70px;
+    line-height: 1;
+    text-align: center;
+    padding: 0;
+    font-size: 12px;
+    flex: 1;
+    box-shadow: none;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    cursor: pointer;
+    transition: all .3s ease;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    outline: none;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.chatroom .input input[type=submit]:hover {
+    background: #656565;
+}
+
+.chatroom #speech-input {
+    height: 30px;
+    width: 30px;
+    margin-left: 5px;
+    background: #343d4e;
+    border: 1px solid #fff;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all .3s ease
+}
+
+.chatroom #speech-input:hover {
+    background: hsla(0, 0%, 100%, .8)
+}
+
+.chatroom .vertical-center {
+    vertical-align: middle
+}
+
+/*# sourceMappingURL=/Chatroom.css.map */
+
+.grid {
+    margin-top: 2%;
+}
+.grid-item {
+    width: 500px;
+    margin: 10px;
+    filter: grayscale(100%);
+}
+
+.grid-item:hover {
+    animation-name: colour;
+    animation-duration: .8s;
+    filter: grayscale(0)
+}
+
+@keyframes colour {
+    0% {
+        filter: grayscale(100%)
+    }
+    to {
+        filter: grayscale(0);
+    }
 }
